--- a/Using_grid_for_our_card_component/css/style.css
+++ b/Using_grid_for_our_card_component/css/style.css
@@ -12,7 +12,7 @@ body {
     background: #111d4a;
     color: #fff;
     display: grid;
-    grid-template: 200px auto auto 150px / auto auto;
+    grid-template: 200px 1em auto auto 150px 1em / 1em auto auto 1em;
 }
 
 .card-img {
@@ -33,14 +33,16 @@ body {
     color: #05cbe9;
     font-size: 1.75rem;
     margin: 0;
-    grid-column: 1/-1;
+    grid-column: 2/-2;
+    grid-row: 3;
 }
 
 .card-body {
     font-size: 1rem;
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.6;
-    grid-column: 1/-1;
+    grid-column: 2/-2;
+    grid-row: 4;
 
 }
 
@@ -54,6 +56,8 @@ body {
     letter-spacing: 1px;
     align-self: end;
     justify-self: end;
+    grid-row: 5;
+    grid-column: 3;
 }
 
 .card-read-time {
@@ -61,10 +65,50 @@ body {
     opacity: .6;
     line-height: 1;
     align-self: end;
+    grid-row: 5;
+    grid-column: 2;
 }
 
 .card-read-time span {
     font-weight: 700;
     display: block;
     font-size: 1.25em;
+}
+
+@media (min-width: 600px) {
+    .card {
+        grid-template:  3em auto 3em auto 250px 3em / 300px 2em 200px auto 2em;
+    }
+    .card-img {
+        object-fit: cover;
+        grid-row: 1 / -1;
+        grid-column: 1;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .card-title {
+        grid-column: 3/-2;
+        grid-row: 2;
+    }
+    
+    .card-body {
+        grid-column: 3/-2;
+        grid-row: 4;
+    
+    }
+    
+    .card-btn {
+        /* align-self: end;
+        justify-self: end; */
+        grid-row: 5;
+        grid-column: -3/-2;
+    }
+    
+    .card-read-time {
+        /* align-self: end; */
+        grid-row: 5;
+        grid-column: 3;
+    }
+    
 }
