--- a/Using_grid_for_our_card_component/css/style.css
+++ b/Using_grid_for_our_card_component/css/style.css
@@ -7,18 +7,18 @@ body {
 }
 
 .card {
+    display: grid;
     width: 90%;
     max-width: 800px;
     background: #111d4a;
     color: #fff;
-    display: grid;
-    grid-template: 200px 1em auto auto 150px 1em / 1em auto auto 1em;
+    grid-template: 200px 1em auto auto 100px 1em / 1em auto auto 1em;
+    
 }
 
 .card-img {
     object-fit: cover;
-    grid-row: 1 / 2;
-    grid-column: 1/-1;
+    grid-column: 1 / -1;
     width: 100%;
     height: 100%;
 }
@@ -33,7 +33,7 @@ body {
     color: #05cbe9;
     font-size: 1.75rem;
     margin: 0;
-    grid-column: 2/-2;
+    grid-column: 2 / -2;
     grid-row: 3;
 }
 
@@ -41,9 +41,8 @@ body {
     font-size: 1rem;
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.6;
-    grid-column: 2/-2;
+    grid-column: 2 / -2;
     grid-row: 4;
-
 }
 
 .card-btn {
@@ -77,38 +76,30 @@ body {
 
 @media (min-width: 600px) {
     .card {
-        grid-template:  3em auto 3em auto 250px 3em / 300px 2em 200px auto 2em;
+        grid-template: 1em auto auto 150px 1em / 200px auto auto 0;
+        grid-gap: 0 2em;
     }
+    
     .card-img {
-        object-fit: cover;
         grid-row: 1 / -1;
-        grid-column: 1;
-        width: 100%;
-        height: 100%;
+        grid-column: 1 / 2;
     }
     
     .card-title {
-        grid-column: 3/-2;
         grid-row: 2;
+        grid-column: 2 / -2;
     }
     
     .card-body {
-        grid-column: 3/-2;
-        grid-row: 4;
-    
-    }
-    
-    .card-btn {
-        /* align-self: end;
-        justify-self: end; */
-        grid-row: 5;
-        grid-column: -3/-2;
+        grid-row: 3;
+        grid-column: 2 / -2;
     }
     
     .card-read-time {
-        /* align-self: end; */
-        grid-row: 5;
-        grid-column: 3;
+        grid-row: 4;
     }
     
+    .card-btn {
+        grid-row: 4;
+    }
 }
