--- a/Grid_Area_and_media_queries/css/style.css
+++ b/Grid_Area_and_media_queries/css/style.css
@@ -3,13 +3,24 @@ body{
 }
 .grid {
     display: grid;
-    grid-template: 3em 3em 3em / 20em;
+    grid-template: 25vh 25vh 25vh 25vh/ 5em auto 5em;
     grid-template-areas: 
-        "sidebar header header"
-        "sidebar content content"
-        "sidebar footer footer";
+        "header header header"
+        ". content ."
+        ". sidebar ."
+        "footer footer footer";
   }
-  
+  @media(min-width: 600px){
+    .grid {
+        display: grid;
+        grid-template: 25vh 50vh 25vh / 2em auto auto 2em;
+
+        grid-template-areas: 
+            "header header header header"
+            ". content sidebar ."
+            "footer footer footer footer";
+      }
+  }
   .header {
     grid-area: header;
   }
