--- a/Libarary_Using_Grid/css/style.css
+++ b/Libarary_Using_Grid/css/style.css
@@ -3,61 +3,52 @@ html, body {
     padding: 0;
     background-color: lightyellow;
     padding: 1rem;
-    /* height: 100vh; */
 }
-.my-lib{
-    /* background-color: magenta; */
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px,160px));
-    grid-gap: 10px;
+
+.my-library {
+    display: flex;
+    flex-wrap: wrap;
 }
-.my-book{
+
+.my-book {
     display: grid;
-    border: 2px solid black;
-    height: 25vh;
-    width: 150px;
-    align-items: center;
-    border-radius: 5% 0 0 5%;
+    grid-template-columns: 1rem 9rem;
     grid-template-areas: 
-        "side main"
-        "bottom bottom"
-        ;
+        "spine cover"
+        "footer footer";
+    margin: 0.2rem;
 }
 
-.side{
-    grid-area: side;
-    background-color: #4A4238;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: .1rem solid black;
-    font-size: 1.5rem;
-    height: 24vh;
-    width: 20px;
-    border-radius: 10% 0 0 0;
-
+.my-book div {
+    border: 0.1rem solid black;
 }
-.main{
-    grid-area: main;
-    background-color: #90EE90;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* border: .1rem solid black; */
-    font-size: 1.5rem;
-    height: 24vh;
-    width: 128px;
+
+.my-book-cover {
+    grid-area: cover;
+    height: 7rem;
+    background-color: lightgreen;
     text-align: center;
+    padding: 1rem;
+    font-size: 1.3rem;
 }
-.bottom{grid-area: bottom;
-    background-color: #D3D3D3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    height: .8vh;
-    width: 150px;
-    border-radius: 0% 0 0 10%;
-    border-top: .1rem solid black;
 
+.my-book-spine {
+    grid-area: spine;
+    background-color: #4A4238;
+    border-top-left-radius: 0.3rem;
+}
+
+.my-book-footer {
+    grid-area: footer;
+    padding: 0.2rem;
+    background-color: lightgray;
+    border-bottom-left-radius: 0.3rem;
+}
+
+.my-book:nth-of-type(even) .my-book-cover {
+    background-color: lightblue;  
+}
+
+.my-book:nth-of-type(even) .my-book-spine {
+    background-color: #E1B07E;  
 }
